@@ -1,0 +1,9 @@
+<?php
+/** Shawiya (Latin script) (Tachawit)
+ *
+ * To improve a translation please visit https://translatewiki.net
+ *
+ * @ingroup Language
+ * @file
+ *
+ */
